--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -7,7 +7,7 @@
 
 # You can split this configuration into multiple files
 # Create your files separately and then link them to this file like this:
-source = ~/.config/hypr/mocha.conf
+# source = ~/.config/hypr/mocha.conf
 
 
 ################
@@ -30,9 +30,11 @@ monitor=HDMI-A-1,1920x1080@75,-1920x0,1
 # Set programs that you use
 $terminal = kitty 
 $fileManager = nautilus 
-$menu = rofi -show drun
-$browser = com.brave.Browser
-
+$menu = wofi --show drun
+# $menu = rofi -show drun
+$browser = brave
+$mail = thunderbird
+$notes = obsidian
 
 
 #################
@@ -44,9 +46,9 @@ $browser = com.brave.Browser
 
 # exec-once = $terminal
 # exec-once = nm-applet &
-exec-once = waybar & nm-applet & blueman-applet & dunst & megasync -b
+exec-once = waybar & nm-applet & blueman-applet & megasync -b & dunst & waypaper --restore
 # Wallpaper
-exec-once = swaybg -i /home/jawor/Wallpapers/wall.png 
+# exec-once = swaybg -i /home/jawor/Wallpapers/wall.png 
 
 
 #############################
@@ -194,7 +196,7 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, Return, exec, $terminal
 bind = $mainMod, Q, killactive,
-bind = $mainMod, M, exit,
+bind = $mainMod SHIFT, Q, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, D, exec, $menu
@@ -203,15 +205,16 @@ bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, F, fullscreen
 bind = $mainMod SHIFT, P, exec, hyprpicker -a -f hex
 bind = $mainMod, B, exec, $browser
-bind = $mainMod, R, exec, rofi -show run
+bind = $mainMod, M, exec, $mail
+bind = $mainMod, O, exec, $notes
+bind = $mainMod, R, exec, wofi --show run
 # Reload waybar
-bind = $mainMod SHIFT, R, exec, kill -SIGUSR2 waybar
+bind = $mainMod SHIFT, R, exec, killall -SIGUSR2 waybar
 # Move focus with mainMod + arrow keys
 bind = $mainMod, h, movefocus, l
 bind = $mainMod, l, movefocus, r
 bind = $mainMod, k, movefocus, u
 bind = $mainMod, j, movefocus, d
-
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
 bind = $mainMod, 2, workspace, 2
