--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -8,11 +8,9 @@ $menu = rofi -show drun
 $browser = firefox
 $mail = thunderbird
 $notes = obsidian
+$music = spotify
 #Autostart
 exec-once = waybar & nm-applet & blueman-applet & megasync -b & dunst & waypaper --restore
-# Wallpaper
-# exec-once = swaybg -i /home/jawor/Wallpapers/wall.png 
-# Enviroment vars
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
 env = WLR_RENDERER_ALLOW_SOFTWARE,1
@@ -100,8 +98,10 @@ bind = $mainMod, B, exec, $browser
 bind = $mainMod, M, exec, $mail
 bind = $mainMod, O, exec, $notes
 bind = $mainMod, P, exec, keepassxc
+bind = $mainMod SHIFT, M, exec, $music
 bind = $mainMod CONTROL, B, exec, $terminal -e bluetuith
 bind = $mainMod CONTROL, S, exec, $terminal -e pulsemixer 
+bind = $mainMod CONTROL, W, exec, waypaper
 # Reload waybar
 bind = $mainMod SHIFT, R, exec, killall -SIGUSR2 waybar
 # Move focus with mainMod + arrow keys
