--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -3,7 +3,7 @@ monitor=HDMI-A-1,1920x1080@75,-1920x0,1
 # Programs
 $terminal = kitty 
 $fileManager = nautilus
-# $menu = wofi --show drun
+$termFileManager = yazi
 $menu = rofi -show drun
 $browser = firefox
 $mail = thunderbird
@@ -88,7 +88,8 @@ bind = $mainMod, Q, killactive,
 bind = $mainMod SHIFT, Q, exit,
 bind = $mainMod, D, exec, $menu
 bind = $mainMod, R, exec, rofi -show run
-bind = $mainMod, E, exec, $fileManager
+bind = $mainMod SHIFT ALT, F, exec, $fileManager
+bind = $mainMod SHIFT, F, exec, $terminal -e $termFileManager
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, F, fullscreen
 bind = $mainMod SHIFT, P, exec, hyprpicker -a -f hex
