--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -19,7 +19,7 @@ env = XDG_SESSION_TYPE,wayland
 env = GBM_BACKEND,nvidia-drm
 env = __GLX_VENDOR_LIBRARY_NAME,nvidia
 env = QT_QPA_PLATFORMTHEME,qt5ct
-env = QT_QPA_PLATFORM,wayland
+env = QT_QPA_PLATFORM,wayland;xcb
 
 cursor {
     no_hardware_cursors = true
