--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -133,6 +133,11 @@ bind = $mainMod SHIFT, 7, movetoworkspace, 7
 bind = $mainMod SHIFT, 8, movetoworkspace, 8
 bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
+# Resize
+bind = $mainMod SHIFT, h, resizeactive, -40 0
+bind = $mainMod SHIFT, l, resizeactive, 40 0
+bind = $mainMod SHIFT, k, resizeactive, 0 -40
+bind = $mainMod SHIFT, j, resizeactive, 0 40
 # audio 
 bindel = , XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
 bindel = , XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
