--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -5,7 +5,7 @@ $terminal = kitty
 $fileManager = nautilus
 $termFileManager = yazi
 $menu = rofi -show drun
-$browser = firefox
+$browser = brave
 $mail = thunderbird
 $notes = obsidian
 $music = spotify
