--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -73,16 +73,16 @@ shadow-exclude = [
 
 # Fade windows in/out when opening/closing and when opacity changes,
 #  unless no-fading-openclose is used.
- fading = false
-# fading = true;
+# fading = false
+fading = true;
 
 # Opacity change between steps while fading in. (0.01 - 1.0, defaults to 0.028)
 # fade-in-step = 0.028
-fade-in-step = 0.03;
+fade-in-step = 0.04;
 
 # Opacity change between steps while fading out. (0.01 - 1.0, defaults to 0.03)
 # fade-out-step = 0.03
-fade-out-step = 0.03;
+fade-out-step = 0.04;
 
 # The time between steps in fade step, in milliseconds. (> 0, defaults to 10)
 # fade-delta = 10
@@ -170,7 +170,8 @@ rounded-corners-exclude = [
 # Bad in performance, with driver-dependent behavior.
 # The name of the switch may change without prior notifications.
 #
- blur-background = false
+ # blur-background = false
+ blur-background = true
 
 # Blur background of windows when the window frame is not opaque.
 # Implies:
