--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -1,9 +1,11 @@
+[window]
+opacity = 0.75
+[font]
+normal = {family = "JetBrainsMonoNerdFont", style = "Default"}
+size = 16
+
+[general]
 import = [
 "~/.config/alacritty/gruvbox_dark.toml"
 ]
-[window]
-opacity = 0.90
-[font]
-normal = {family = "JetBrainsMonoNerdFont", style = "Default"}
-size = 14
 
