--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -37,4 +37,4 @@ bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 bind 'v' split-window -v -c "#{pane_current_path}"
 bind 'h' split-window -h -c "#{pane_current_path}"
 
-run '~/.tmux/plugins/tpm/tpm'
+run '~/.config/tmux/plugins/tpm/tpm'
